--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,43 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.19MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-337.4KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.67MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-343.0KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-277.0KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-845.2KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: cd39f62aed7b90f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23133, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
+  - {name: 🇨🇳 中国-622.7KB/s(Youtube:不良林), server: x.mceee.xyz, port: 26041, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-397.3KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-337.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-343.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-277.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-845.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-622.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-397.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-337.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-343.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-277.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-845.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-622.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-397.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-337.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-343.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-277.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-845.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-622.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-397.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +52,32 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-337.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-343.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-277.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-845.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-622.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-397.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-337.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-343.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-277.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-845.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-622.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-397.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-337.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-343.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-277.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-845.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-622.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-397.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +93,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-337.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.67MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-343.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-277.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-845.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-622.7KB/s(Youtube:不良林)
+      - 🇮🇳 印度-397.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
