--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,35 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-420.5KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇨🇳 中国-271.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-6.20MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
-  - {name: 🇯🇵 日本-1.57MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.81MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇨🇳 中国-5.50MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
+  - {name: 🇰🇷 韩国-336.4KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-420.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-336.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-420.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-336.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-420.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-336.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -48,29 +44,26 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-420.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-336.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-420.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-336.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-420.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-336.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -86,10 +79,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-420.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-271.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.57MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.50MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-336.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
