--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,27 +5,35 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-446.4KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇮🇳 印度-545.7KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇨🇳 中国-401.6KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-446.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-446.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-446.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -36,20 +44,26 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-446.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-446.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-446.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -65,7 +79,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-446.4KB/s(Youtube:不良林)
+      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
