--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,65 +5,80 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-545.7KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇨🇳 中国-401.6KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
-  - {name: 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-704.2KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-352.8KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 🇨🇦 加拿大-444.3KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-2.80MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -79,9 +94,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-545.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-401.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-362.0KB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
