--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,80 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-704.2KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-352.8KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
-  - {name: 🇨🇦 加拿大-444.3KB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇬🇧 英国-1.52MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 未知国家-240.5KB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
   - {name: 🇯🇵 日本-2.80MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-704.2KB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.99MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇯🇵 日本-5.28MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-2.62MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-315.6KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 未知国家-240.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 未知国家-240.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 未知国家-240.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 未知国家-240.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 未知国家-240.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 未知国家-240.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -94,11 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-444.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.52MB/s(Youtube:不良林)
+      - 未知国家-240.5KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
+      - 🇬🇧 英国-704.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.99MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.28MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
