--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-315.6KB/s(Youtube:不良林), server: nas5.travelerv2.xyz, port: 21871, type: vmess, uuid: b69f3735-a1a1-3dbf-889b-4594d140752f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: nas5.travelerv2.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-300.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇰🇷 韩国-536.2KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-937.7KB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-313.5KB/s(Youtube:不良林), server: lsj02.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: lsj02.wangxd.life, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-896.7KB/s(Youtube:不良林), server: 185.167.116.252, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇬🇧 英国-2.86MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-454.6KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-413.5KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-2.22MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇬🇧 英国-2.44MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-792.7KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16040, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇯🇵 日本-353.9KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: 32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-300.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-536.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-937.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-896.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-792.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-300.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-536.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-937.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-896.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-792.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-300.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-536.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-937.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-896.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-792.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-300.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-536.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-937.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-896.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-792.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-300.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-536.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-937.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-896.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-792.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-300.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-536.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-937.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-896.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-792.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-315.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-842.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-300.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-536.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-937.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-313.5KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-896.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.86MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-454.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-413.5KB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.22MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-792.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-353.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
